--- a/coker_resume.Rmd
+++ b/coker_resume.Rmd
@@ -1,23 +1,28 @@
 ---
-title: "David A Coker"
-author: "David A Coker"
+title: "David A Coker's resume"
+author: David Coker
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
     # set it to true for a self-contained HTML page but it'll take longer to render
-    self_contained: true
+    self_contained: false
+# uncomment this line to produce HTML and PDF in RStudio:
+#knit: pagedown::chrome_print
 ---
+
 ```{r Load_Fonts, echo=FALSE}
 library(fontawesome)
 ```
-
 
 Aside
 ================================================================================
 
 
 ![David A Coker](coker.png){width=80%}
-<!-- ![Eric Scott](`r here::here("eric.png")`) -->
+
+
+Contact Info {#contact}
+--------------------------------------------------------------------------------
 
 `r fa("male", fill="black")`
 `r fa("globe", fill="blue")`
@@ -27,11 +32,6 @@ Aside
 `r fa("passport", fill="blue")`
 `r fa("city", fill="blue")`
 
-<!--
-Contact Info {#contact}
---------------------------------------------------------------------------------
--->
-
 <i class="fa fa-linkedin"></i> [linkedin.com/in/davidacoker](https://linkedin.com/in/davidacoker)
 
 <i class="fa fa-envelope"></i> davidacoker@gmail.com
@@ -39,11 +39,6 @@ Contact Info {#contact}
 <i class="fa fa-home"></i> Utah
 
 <i class="fa fa-phone"></i> +1 719.352.9262
-
-<!-- - <i class="fa fa-github"></i> [github.com/cryptto](https://github.com/cryptto) -->
-<!-- - <i class="fa-brands fa-kaggle"></i> [github.com/cryptto](https://github.com/cryptto) -->
-
-
 
 
 `r fa("cogs", fill="blue")` Skills {#skills}
@@ -70,12 +65,6 @@ Contact Info {#contact}
 
 
 
-Disclaimer {#disclaimer}
---------------------------------------------------------------------------------
-
-<!--This resume was made with the R package [**pagedown**](https://github.com/rstudio/pagedown).
-
-Last updated on `r Sys.Date()`-->
 
 ```{css Stop_Sidebar, echo=FALSE}
 .pagedjs_page:not(:first-of-type) {
@@ -85,7 +74,6 @@ Last updated on `r Sys.Date()`-->
   --decorator-horizontal-margin: 0.2in;
 }
 ```
-
 
 Main
 ================================================================================
@@ -104,6 +92,7 @@ David A. Coker, Ph.D. {#title}
 Technical leader who brings innovative solutions to challenging problems through a combination of system architecture, software design, data science, and DevSecOps techniques
 <!-- Scientific background spanning math, physics, and data science.-->
 
+
 Professional Experience {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
@@ -119,7 +108,6 @@ Layton, UT
 - Led development of a virtualized data fabric providing schema-on-query information access to disparate and distributed data environments
 - Lead system risk engineer for airframe certification test harness
 - Data architect for air readiness analytics platform
-
 
 ### Novetta
 
@@ -218,9 +206,8 @@ Colorado Springs, CO
 
 2005-2006
 
-<!--
-- Provided planning, budgetary, staffing, and project review support
--->
+
+
 
 ### Integrated Sensors, Inc.
 
@@ -297,25 +284,3 @@ Stony Brook, NY
 1993
 
 
-<!-- 
-Education {data-icon=graduation-cap data-concise=true}
---------------------------------------------------------------------------------
-
-### Stony Brook University
-
-Ph.D. in Physics
-
-Stony Brook, NY
-
-1988--1993
-
-
-### New Mexico Institute of Mining and Technology
-
-B.S. in Physics
-
-Socorro, NM
-
-1984--1988
-
--->
